Bugfix : cell flash code sometimes throws error Bugfix : Horizontal scroll triggers grid lazy load of data.(same data)

--- a/src/styles/AppStyles.css
+++ b/src/styles/AppStyles.css
@@ -31,7 +31,7 @@
     .tablecontainer {
         /* min-width: 30%; */
         /* max-width: 100%; */
-        height: 100%;
+        height: 98%;
         /* flex : 1; */
         border: 1px solid lightgrey;
         border-collapse: collapse;
@@ -52,13 +52,16 @@
     .blotterinfocontainer {
         align-items : center;
         padding: 2px;
-        /* margin-bottom: 10px; */
-        /* border: 0.5px solid grey; */
+        flex: 0.5;
+    }
+
+    .temporalContainer {
+        flex : 0.7;
     }
 
     .temporalUIblock {
-        width: 50%;        
-        align-self: center;
+        width: 80%;
+        margin-left: 10%;
         display: flex;
     }
 
@@ -78,13 +81,16 @@
     }
 
     .dragtobar{
-        /* background-color: rgb(255, 255, 255); */
-        border: 1px dotted black;
-        border-bottom: 0px;
-        height: 27px;
+        flex : 1;
+        /* width: 50%; */
+        border: 1px groove;
+        /* border-bottom: 1px; */
+        /* padding: 2px; */
         text-align: center;
         vertical-align: middle;
-        font-size: 14px;
+        font-size: 12px;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        color: grey;
     }
 
     .gridContainerDiv {
@@ -118,7 +124,7 @@
     }
 
     th:hover {
-        background-color: rgb(206, 77, 77);
+        background-color: rgb(189, 192, 194);
         cursor: move;
     }
 
